Node server making api requests

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <link href="./css/places.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <input id="apikey" type="text" name="apikey" placeholder="Enter your API key" />
     <input id="keyword" type="text" name="keyword" placeholder="If you want specific restaurant" />
+    <input id="go" type="button" value="Go" style="cursor: pointer;" />
     <ul id="results"></ul>
     <script src="./js/search.js" type="text/javascript"></script>
 </body>
