--- a/public/index.html
+++ b/public/index.html
@@ -28,29 +28,32 @@
         <div class="jumbotron">
             <div class="container">
                 <h1>Where do we eat ?</h1>
-                <input type="text" name="keyword" class="form-control" placeholder="If you want specific restaurant">
-                Opened now ?
-                <div class="btn-group" data-toggle="buttons">
-                    <label class="btn btn-primary active">
-                        <input type="radio" name="open-now" id="1" autocomplete="off" checked> Yes
-                    </label>
-                    <label class="btn btn-primary">
-                        <input type="radio" name="options" id="0" autocomplete="off"> No
-                    </label>
-                </div>
-                How far ?
-                <div class="input-group">
-                    <div  class="form-control">
-                        <input class="range range-primary" type="range" name="distance" min="50" max="500" value="200" onchange="distancePrimary.value=value">
+                <div class="row">
+                    <input type="text" name="keyword" class="form-control" placeholder="If you want specific restaurant">
+                    Opened now ?
+                    <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-primary active">
+                            <input type="radio" name="open-now" id="1" autocomplete="off" checked> Yes
+                        </label>
+                        <label class="btn btn-primary">
+                            <input type="radio" name="options" id="0" autocomplete="off"> No
+                        </label>
                     </div>
-                    <div class="input-group-addon"><output id="distancePrimary">200</output>m</div>
+                    How far ?
+                    <div class="input-group">
+                        <div  class="form-control">
+                            <input class="range range-primary" type="range" name="range" min="50" max="500" value="200" onchange="distancePrimary.value=value">
+                        </div>
+                        <div class="input-group-addon"><output id="distancePrimary">200</output>m</div>
+                    </div>
+                    <button type="button" class="btn btn-default" id="choose">
+                        <span class="glyphicon glyphicon-random" aria-hidden="true"></span> Choose for me
+                    </button>
+                    <button type="button" class="btn btn-default" id="search">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> search
+                    </button>
                 </div>
-                <button type="button" class="btn btn-default" id="choose">
-                    <span class="glyphicon glyphicon-random" aria-hidden="true"></span> Choose for me
-                </button>
-                <button type="button" class="btn btn-default" id="search">
-                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span> search
-                </button>
+                <div class="row" id="random-result"></div>
             </div>
         </div>
 
